fixed background stretching issue by adding an inner wrapping div inside of the App div

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -42,7 +42,7 @@ img {
     background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 0.295)), url('../photos/bkg-sunny.jpg');
 }
 
-.App,
+
 .default,
 .sunny,
 .snowy,
@@ -52,11 +52,16 @@ img {
 .stormy {
     background-size: cover;
     background-position: bottom;
-    background-attachment: fixed;
     height: 100vh;
     padding:  0 1rem;
-    position: relative;
-    overflow: scroll;
+    overflow: auto;
+    max-width: 100%;
+}
+
+.App {
+    max-width: 750px;
+    margin: auto auto;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.781);
 }
 
 
